update review comments