@@ -5,7 +5,7 @@
     <parent>
         <groupId>uk.gov.companieshouse</groupId>
         <artifactId>companies-house-parent</artifactId>
-        <version>2.1.10</version>
+        <version>2.1.11</version>
         <relativePath/>
     </parent>
 
@@ -16,8 +16,7 @@
 
     <properties>
         <java.version>21</java.version>
-        <log4j.version>2.24.2</log4j.version>
-        <spring-boot-dependencies.version>3.3.5</spring-boot-dependencies.version>
+        <spring-boot-dependencies.version>3.4.0</spring-boot-dependencies.version>
         <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -26,14 +25,14 @@
         <structured-logging.version>3.0.20</structured-logging.version>
         <mockito-junit-jupiter-version>5.14.2</mockito-junit-jupiter-version>
         <mockito-inline.version>5.2.0</mockito-inline.version>
-        <junit-jupiter.version>5.8.2</junit-jupiter.version>
-        <junit-jupiter-engine-version>5.11.3</junit-jupiter-engine-version>
+        <junit-jupiter.version>5.11.4</junit-jupiter.version>
+        <junit-jupiter-engine-version>5.11.4</junit-jupiter-engine-version>
         <private-api-sdk-java.version>4.0.99</private-api-sdk-java.version>
         <api-sdk-manager-java-library.version>3.0.6</api-sdk-manager-java-library.version>
-        <testcontainers.version>1.20.3</testcontainers.version>
+        <testcontainers.version>1.20.4</testcontainers.version>
         <org.hamcrest.version>3.0</org.hamcrest.version>
         <mockserver-client-java>5.15.0</mockserver-client-java>
-        <jib-maven-plugin>3.4.3</jib-maven-plugin>
+        <jib-maven-plugin>3.4.4</jib-maven-plugin>
         <avro.version>1.12.0</avro.version>
         <sonar.exclusions>
             **/config/ApplicationConfig.java,
@@ -59,17 +58,14 @@
             **/ordersconsumer/RetryableErrorException.java,
             **/OrderNotificationApplication.java
         </sonar.exclusions>
+
+        <argLine>
+            --add-opens java.base/java.util=ALL-UNNAMED
+            --add-opens java.base/java.lang=ALL-UNNAMED
+        </argLine>
     </properties>
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>org.apache.logging.log4j</groupId>
-                <artifactId>log4j-bom</artifactId>
-                <version>${log4j.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
@@ -79,6 +75,13 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+    <repositories>
+        <repository>
+            <id>maven-central</id>
+            <url>https://repo1.maven.org/maven2/</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
         <dependency>
@@ -135,12 +138,12 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit-jupiter-engine-version}</version>
-            <scope>test</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.junit.jupiter</groupId>-->
+<!--            <artifactId>junit-jupiter-engine</artifactId>-->
+<!--            <version>${junit-jupiter-engine-version}</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>uk.gov.companieshouse</groupId>
@@ -210,8 +213,8 @@
 
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-inline</artifactId>
-            <version>${mockito-inline.version}</version>
+            <artifactId>mockito-core</artifactId>
+            <version>5.14.2</version>
             <scope>test</scope>
         </dependency>
 
@@ -269,7 +272,7 @@
 
         <dependency>
             <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-library</artifactId>
+            <artifactId>hamcrest</artifactId>
             <version>${org.hamcrest.version}</version>
             <scope>test</scope>
         </dependency>
@@ -310,7 +313,7 @@
                         <image>416670754337.dkr.ecr.eu-west-2.amazonaws.com/ci-corretto-build-21:latest</image>
                     </from>
                     <to>
-                        <image>416670754337.dkr.ecr.eu-west-2.amazonaws.com/confirmation-statement-api:latest</image>
+                        <image>416670754337.dkr.ecr.eu-west-2.amazonaws.com/order-notification-sender:latest</image>
                     </to>
                 </configuration>
             </plugin>
